test/spec_vectors/simd_i8x16_cmp/fail/module_4.wat
(module (func (result v128) (i8x16.gt_s (i32.const 0) (f32.const 0))))